--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="form-container sign-in">
             <form>
-                <h1>Login</h1>
+                <a href="/Tela Vendedor/index.html"><h1>Login</h1></a>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
