--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -18,12 +18,12 @@
         </div>
         <div class="chamada">
             <label>
-                <a href="/Tela Chamada/index.html"><button><i class='bx bxs-phone-call' ></i></button></a>
+                <a href="/Tela Chamada/index.html"><button><i class='bx bx-tv'></i></button></a>
             </label>
         </div>
         <div class="Vendedor">
             <label>
-                <a href="/Tela Vendedor/index.html"><button><i class='bx bxs-color'></i></button></a>
+                <a href="/index.html"><button><i class='bx bxs-color'></i></button></a>
             </label>
         </div>
     </main>
