--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,30 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <header>
+        <nav>
+        <button><a href="/index.html"><i class='bx bx-log-in'></i></a></button>
+        <img src="/assets/img/Usuarios/Wesley Sá.jpg" alt="">
+        </nav>
+    </header>
+
     <main>
-        <div class="cliente">
+
+        <div id="senha">
+            <div id="idsenha">
+                <h3>AC580</h3>
+                <p>Em Atendimento</p>
+                <img src="" alt="">
+            </div>
+
+            <div class="botoes">
+                <button id="chamar">Chamar</button>
+                <button id="Cancelar">Cancelar</button>
+            </div>
+        </div>
+
+
+        <!-- <div class="cliente">
             <label>
                 <a href="/Tela Cliente/index.html"><button><i class='bx bx-child'></i></button></a>
             </label>
@@ -20,12 +42,7 @@
             <label>
                 <a href="/Tela Chamada/index.html"><button><i class='bx bx-tv'></i></button></a>
             </label>
-        </div>
-        <div class="Vendedor">
-            <label>
-                <a href="/index.html"><button><i class='bx bxs-color'></i></button></a>
-            </label>
-        </div>
+        </div> -->
     </main>
 </body>
 </html>
