--- a/Tela Cliente/index.html
+++ b/Tela Cliente/index.html
@@ -8,11 +8,10 @@
     <!-- links -->
     <link rel="shortcut icon" href="/assets/img/Favicon/Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
     <main>
-        <div class="opcoes">
+        <div class="opcoes show">
             <h1>ESCOLHA SEU ATENDIMENTO</h1>
             <div id="atendimento-comum">
                 <button id="btn-comum">ATENDIMENTO COMUM</button>
@@ -22,15 +21,19 @@
             </div>
         </div>
 
-        <div class="loading" style="display: none;">
-            <div class="spinner"></div>
-        </div>
-
-        <div class="senha" style="display: none;">
-            <h1>AGUARDE A IMPRESSÃO <br> DA SUA SENHA</h1>
-            <img src="/assets/img/Impressora/impressora.svg" alt="">
-            <button id="btn-ok">OK</button>
+        <div class="gerandoSenha">
+            <div class="loading" style="display: none;">
+                <div class="spinner"></div>
+            </div>
+    
+            <div class="senha" style="display: none;">
+                <h1>AGUARDE A IMPRESSÃO <br> DA SUA SENHA</h1>
+                <img src="/assets/img/Impressora/impressora.svg" alt="">
+                <button id="btn-ok">OK</button>
+            </div>
         </div>
     </main>
+
+    <script type="module" src="/Tela Cliente/script.js"></script>
 </body>
 </html>
