--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -3,46 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atendimento - Vendedor</title>
 
     <!-- links -->
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Importa o SDK do Firebase via CDN -->
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore.js"></script>
+    <!-- Importa o script do Firebase e o script comum -->
+    <script type="module" src="/Tela Vendedor/script.js"></script>
 </head>
 <body>
     <header>
         <nav>
-        <button><a href="/index.html"><i class='bx bx-log-in'></i></a></button>
-        <img src="/assets/img/Usuarios/Wesley Sá.jpg" alt="">
+            <button><a href="/index.html"><i class='bx bx-log-in'></i></a></button>
+            <img src="/assets/img/Usuarios/Wesley Sá.jpg" alt="">
         </nav>
     </header>
-
+    
     <main>
-
-        <div id="senha">
-            <div id="idsenha">
-                <h3>AC580</h3>
-                <p>Em Atendimento</p>
-                <img src="" alt="">
-            </div>
-
-            <div class="botoes">
-                <button id="chamar">Chamar</button>
-                <button id="Cancelar">Cancelar</button>
-            </div>
-        </div>
-
-
-        <!-- <div class="cliente">
-            <label>
-                <a href="/Tela Cliente/index.html"><button><i class='bx bx-child'></i></button></a>
-            </label>
-        </div>
-        <div class="chamada">
-            <label>
-                <a href="/Tela Chamada/index.html"><button><i class='bx bx-tv'></i></button></a>
-            </label>
-        </div> -->
+        <div id="card-container"></div>
     </main>
 </body>
 </html>
