--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -23,7 +23,9 @@
     </header>
     
     <main>
+        <button id="proximo"><i class='bx bx-play'></i></button>
         <div id="card-container"></div>
     </main>
+    
 </body>
 </html>
