--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atendimento - Vendedor</title>
+    <title>Carflax | Vendedor</title>
 
     <!-- links -->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/assets/img/Favicon/Favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Importa o SDK do Firebase via CDN -->
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
