--- a/Tela Chamada/index.html
+++ b/Tela Chamada/index.html
@@ -7,6 +7,7 @@
     <!-- links -->
     <link rel="stylesheet" href="./style.css">
     <!-- Firebase CDN -->
+     <link rel="shortcut icon" href="/assets/img/Favicon/Favicon.png" type="image/x-icon">
     <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js" type="module"></script>
     <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-firestore.js" type="module"></script>
 </head>
@@ -20,7 +21,7 @@
                 </div>
                 <div class="local">
                     <span><p>Local</p></span>
-                    <h1 id="nomeVendedor"> <span id="numero-vendedor"></span></h1>
+                    <h1 id="nomeVendedor"> <span id="numero-estacao"> </span></h1>
                 </div>
             </div>
             
@@ -37,7 +38,7 @@
         <footer>
             <h3>Últimas Chamadas</h3>
             <div class="ultimas-chamadas">
-                <!-- Cards de últimas chamadas são gerados dinamicamente pelo JavaScript -->
+            
             </div>
         </footer>
     </main>
