--- a/Chamada/index.html
+++ b/Chamada/index.html
@@ -7,7 +7,7 @@
     <!-- links -->
     <link rel="stylesheet" href="/Chamada/style.css">
     <!-- Firebase CDN -->
-     <link rel="shortcut icon" href="/assets/img/Favicon/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/Favicon/Favicon.png" type="image/x-icon">
     <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js" type="module"></script>
     <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-firestore.js" type="module"></script>
 </head>
@@ -38,10 +38,13 @@
         <footer>
             <h3>Últimas Chamadas</h3>
             <div class="ultimas-chamadas">
-            
+                <!-- Adicione seu conteúdo aqui -->
             </div>
         </footer>
     </main>
+
+    <!-- Botão para entrar em tela cheia -->
+    <button id="fullscreenButton">Entrar em Tela Cheia</button>
 
     <script type="module" src="/Chamada/script.js" defer></script>
 </body>
