--- a/Chamada/index.html
+++ b/Chamada/index.html
@@ -36,15 +36,14 @@
         </header>
 
         <footer>
-            <h3>Últimas Chamadas</h3>
+            <h3 id="titulo">Últimas Chamadas</h3>
             <div class="ultimas-chamadas">
-                <!-- Adicione seu conteúdo aqui -->
+                <!-- Os cards serão adicionados dinamicamente pelo JavaScript -->
             </div>
         </footer>
     </main>
 
     <!-- Botão para entrar em tela cheia -->
-    <button id="fullscreenButton">Entrar em Tela Cheia</button>
 
     <script type="module" src="/Chamada/script.js" defer></script>
 </body>
