--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div id="welcome-message"></div> <!-- Adiciona esta linha -->
             <div class="nav-item">
-                <i class='bx bx-desktop'></i>
+                <a href="/Chamada/index.html"><i class='bx bx-desktop'></i></a>
                 <select id="seletorEstacao">
                     <option value="1">Estação 1</option>
                     <option value="2">Estação 2</option>
