--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -18,8 +18,10 @@
     <header>
         <nav>
             <div id="welcome-message"></div> <!-- Adiciona esta linha -->
+            
             <div class="nav-item">
-                <a href="/Chamada/index.html"><i class='bx bx-desktop'></i></a>
+                <a target="_blank" href="/Tela Cliente/index.html"><i id="usuario" class='bx bx-child'></i></a>
+                <a target="_blank" href="/Chamada/index.html"><i class='bx bx-desktop'></i></a>
                 <select id="seletorEstacao">
                     <option value="1">Estação 1</option>
                     <option value="2">Estação 2</option>
