--- a/Tela Vendedor/index.html
+++ b/Tela Vendedor/index.html
@@ -31,7 +31,7 @@
                 </select>
             </div>
             <button><a href="/index.html"><i class='bx bx-log-in'></i></a></button>
-            <img id="imagemUsuario" src="" alt="Imagem do usuário">
+            <img id="imagemUsuario" src="" alt="">
         </nav>
     </header>
     
